extern/Hexapod/win_32/XPS_Q8_drivers.h

DLL int __stdcall PositionerStageParameterGet (int SocketIndex, char * PositionerName, char * ParameterName, char * ParameterValue);  /* Return the stage parameter */
DLL int __stdcall PositionerStageParameterSet (int SocketIndex, char * PositionerName, char * ParameterName, char * ParameterValue);  /* Save the stage parameter */
DLL int __stdcall PositionerTimeFlasherGet (int SocketIndex, char * PositionerName, double * MinimumPosition, double * MaximumPosition, double * PositionStep, bool * EnableState);  /* Read time flasher parameters */
DLL int __stdcall PositionerTimeFlasherSet (int SocketIndex, char * PositionerName, double MinimumPosition, double MaximumPosition, double TimeInterval);  /* Set time flasher parameters */
DLL int __stdcall PositionerTimeFlasherEnable (int SocketIndex, char * PositionerName);  /* Enable time flasher */
DLL int __stdcall PositionerTimeFlasherDisable (int SocketIndex, char * PositionerName);  /* Disable time flasher */
DLL int __stdcall PositionerUserTravelLimitsGet (int SocketIndex, char * PositionerName, double * UserMinimumTarget, double * UserMaximumTarget);  /* Read UserMinimumTarget and UserMaximumTarget */
DLL int __stdcall PositionerUserTravelLimitsSet (int SocketIndex, char * PositionerName, double UserMinimumTarget, double UserMaximumTarget);  /* Update UserMinimumTarget and UserMaximumTarget */
DLL int __stdcall PositionerWarningFollowingErrorSet (int SocketIndex, char * PositionerName, double WarningFollowingError);  /* Set positioner warning following error limit */
DLL int __stdcall PositionerWarningFollowingErrorGet (int SocketIndex, char * PositionerName, double * WarningFollowingError);  /* Get positioner warning following error limit */
DLL int __stdcall PositionerCorrectorAutoTuning (int SocketIndex, char * PositionerName, int TuningMode, double * KP, double * KI, double * KD);  /* Astrom&Hagglund based auto-tuning */
DLL int __stdcall PositionerAccelerationAutoScaling (int SocketIndex, char * PositionerName, double * Scaling);  /* Astrom&Hagglund based auto-scaling */
DLL int __stdcall MultipleAxesPVTVerification (int SocketIndex, char * GroupName, char * TrajectoryFileName);  /* Multiple axes PVT trajectory verification */
DLL int __stdcall MultipleAxesPVTVerificationResultGet (int SocketIndex, char * PositionerName, char * FileName, double * MinimumPosition, double * MaximumPosition, double * MaximumVelocity, double * MaximumAcceleration);  /* Multiple axes PVT trajectory verification result get */
DLL int __stdcall MultipleAxesPVTExecution (int SocketIndex, char * GroupName, char * TrajectoryFileName, int ExecutionNumber);  /* Multiple axes PVT trajectory execution */
DLL int __stdcall MultipleAxesPVTParametersGet (int SocketIndex, char * GroupName, char * FileName, int * CurrentElementNumber);  /* Multiple axes PVT trajectory get parameters */
DLL int __stdcall MultipleAxesPVTPulseOutputSet (int SocketIndex, char * GroupName, int StartElement, int EndElement, double TimeInterval);  /* Configure pulse output on trajectory */
DLL int __stdcall MultipleAxesPVTPulseOutputGet (int SocketIndex, char * GroupName, int * StartElement, int * EndElement, double * TimeInterval);  /* Get pulse output on trajectory configuration */
DLL int __stdcall MultipleAxesPVTLoadToMemory (int SocketIndex, char * GroupName, char * TrajectoryPart);  /* Multiple Axes Load PVT trajectory through function */
DLL int __stdcall MultipleAxesPVTResetInMemory (int SocketIndex, char * GroupName);  /* Multiple Axes PVT trajectory reset in memory */
DLL int __stdcall SingleAxisSlaveModeEnable (int SocketIndex, char * GroupName);  /* Enable the slave mode */
DLL int __stdcall SingleAxisSlaveModeDisable (int SocketIndex, char * GroupName);  /* Disable the slave mode */
DLL int __stdcall SingleAxisSlaveParametersSet (int SocketIndex, char * GroupName, char * PositionerName, double Ratio);  /* Set slave parameters */
DLL int __stdcall SingleAxisSlaveParametersGet (int SocketIndex, char * GroupName, char * PositionerName, double * Ratio);  /* Get slave parameters */
DLL int __stdcall SingleAxisThetaClampDisable (int SocketIndex, char * GroupName);  /* Set clamping disable on selected group */
DLL int __stdcall SingleAxisThetaClampEnable (int SocketIndex, char * GroupName);  /* Set clamping enable on selected group */
DLL int __stdcall SingleAxisThetaSlaveModeEnable (int SocketIndex, char * GroupName);  /* Enable the slave mode */
DLL int __stdcall SingleAxisThetaSlaveModeDisable (int SocketIndex, char * GroupName);  /* Disable the slave mode */
DLL int __stdcall SingleAxisThetaSlaveParametersSet (int SocketIndex, char * GroupName, char * PositionerName, double Ratio);  /* Set slave parameters */
DLL int __stdcall SingleAxisThetaSlaveParametersGet (int SocketIndex, char * GroupName, char * PositionerName, double * Ratio);  /* Get slave parameters */
DLL int __stdcall SpindleSlaveModeEnable (int SocketIndex, char * GroupName);  /* Enable the slave mode */
DLL int __stdcall SpindleSlaveModeDisable (int SocketIndex, char * GroupName);  /* Disable the slave mode */
DLL int __stdcall SpindleSlaveParametersSet (int SocketIndex, char * GroupName, char * PositionerName, double Ratio);  /* Set slave parameters */
DLL int __stdcall SpindleSlaveParametersGet (int SocketIndex, char * GroupName, char * PositionerName, double * Ratio);  /* Get slave parameters */
DLL int __stdcall GroupSpinParametersSet (int SocketIndex, char * GroupName, double Velocity, double Acceleration);  /* Modify Spin parameters on selected group and activate the continuous move */
DLL int __stdcall GroupSpinParametersGet (int SocketIndex, char * GroupName, double * Velocity, double * Acceleration);  /* Get Spin parameters on selected group */
DLL int __stdcall GroupSpinCurrentGet (int SocketIndex, char * GroupName, double * Velocity, double * Acceleration);  /* Get Spin current on selected group */
DLL int __stdcall GroupSpinModeStop (int SocketIndex, char * GroupName, double Acceleration);  /* Stop Spin mode on selected group with specified acceleration */
DLL int __stdcall XYLineArcVerification (int SocketIndex, char * GroupName, char * TrajectoryFileName);  /* XY trajectory verification */
DLL int __stdcall XYLineArcVerificationResultGet (int SocketIndex, char * PositionerName, char * FileName, double * MinimumPosition, double * MaximumPosition, double * MaximumVelocity, double * MaximumAcceleration);  /* XY trajectory verification result get */
DLL int __stdcall XYLineArcExecution (int SocketIndex, char * GroupName, char * TrajectoryFileName, double Velocity, double Acceleration, int ExecutionNumber);  /* XY trajectory execution */
DLL int __stdcall XYLineArcParametersGet (int SocketIndex, char * GroupName, char * FileName, double * Velocity, double * Acceleration, int * CurrentElementNumber);  /* XY trajectory get parameters */
DLL int __stdcall XYLineArcPulseOutputSet (int SocketIndex, char * GroupName, double StartLength, double EndLength, double PathLengthInterval);  /* Configure pulse output on trajectory */
DLL int __stdcall XYLineArcPulseOutputGet (int SocketIndex, char * GroupName, double * StartLength, double * EndLength, double * PathLengthInterval);  /* Get pulse output on trajectory configuration */
DLL int __stdcall XYPVTVerification (int SocketIndex, char * GroupName, char * TrajectoryFileName);  /* XY PVT trajectory verification */
DLL int __stdcall XYPVTVerificationResultGet (int SocketIndex, char * PositionerName, char * FileName, double * MinimumPosition, double * MaximumPosition, double * MaximumVelocity, double * MaximumAcceleration);  /* XY PVT trajectory verification result get */
DLL int __stdcall XYPVTExecution (int SocketIndex, char * GroupName, char * TrajectoryFileName, int ExecutionNumber);  /* XY PVT trajectory execution */
DLL int __stdcall XYPVTParametersGet (int SocketIndex, char * GroupName, char * FileName, int * CurrentElementNumber);  /* XY PVT trajectory get parameters */
DLL int __stdcall XYPVTPulseOutputSet (int SocketIndex, char * GroupName, int StartElement, int EndElement, double TimeInterval);  /* Configure pulse output on trajectory */
DLL int __stdcall XYPVTPulseOutputGet (int SocketIndex, char * GroupName, int * StartElement, int * EndElement, double * TimeInterval);  /* Get pulse output on trajectory configuration */
DLL int __stdcall XYPVTLoadToMemory (int SocketIndex, char * GroupName, char * TrajectoryPart);  /* XY Load PVT trajectory through function */
DLL int __stdcall XYPVTResetInMemory (int SocketIndex, char * GroupName);  /* XY PVT trajectory reset in memory */