extern/Hexapod/win_32/XPS_Q8_drivers.bas

Declare Function PositionerStageParameterGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal ParameterName As String, ByVal ParameterValue As String) As Integer '  Return the stage parameter
Declare Function PositionerStageParameterSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal ParameterName As String, ByVal ParameterValue As String) As Integer '  Save the stage parameter
Declare Function PositionerTimeFlasherGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, MinimumPosition As Double, MaximumPosition As Double, PositionStep As Double, EnableState As Boolean) As Integer '  Read time flasher parameters
Declare Function PositionerTimeFlasherSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal MinimumPosition As Double, ByVal MaximumPosition As Double, ByVal TimeInterval As Double) As Integer '  Set time flasher parameters
Declare Function PositionerTimeFlasherEnable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String) As Integer '  Enable time flasher
Declare Function PositionerTimeFlasherDisable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String) As Integer '  Disable time flasher
Declare Function PositionerUserTravelLimitsGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, UserMinimumTarget As Double, UserMaximumTarget As Double) As Integer '  Read UserMinimumTarget and UserMaximumTarget
Declare Function PositionerUserTravelLimitsSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal UserMinimumTarget As Double, ByVal UserMaximumTarget As Double) As Integer '  Update UserMinimumTarget and UserMaximumTarget
Declare Function PositionerWarningFollowingErrorSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal WarningFollowingError As Double) As Integer '  Set positioner warning following error limit
Declare Function PositionerWarningFollowingErrorGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, WarningFollowingError As Double) As Integer '  Get positioner warning following error limit
Declare Function PositionerCorrectorAutoTuning Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal TuningMode As Integer, KP As Double, KI As Double, KD As Double) As Integer '  Astrom&Hagglund based auto-tuning
Declare Function PositionerAccelerationAutoScaling Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, Scaling As Double) As Integer '  Astrom&Hagglund based auto-scaling
Declare Function MultipleAxesPVTVerification Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal TrajectoryFileName As String) As Integer '  Multiple axes PVT trajectory verification
Declare Function MultipleAxesPVTVerificationResultGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal FileName As String, MinimumPosition As Double, MaximumPosition As Double, MaximumVelocity As Double, MaximumAcceleration As Double) As Integer '  Multiple axes PVT trajectory verification result get
Declare Function MultipleAxesPVTExecution Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal TrajectoryFileName As String, ByVal ExecutionNumber As Integer) As Integer '  Multiple axes PVT trajectory execution
Declare Function MultipleAxesPVTParametersGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal FileName As String, CurrentElementNumber As Integer) As Integer '  Multiple axes PVT trajectory get parameters
Declare Function MultipleAxesPVTPulseOutputSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal StartElement As Integer, ByVal EndElement As Integer, ByVal TimeInterval As Double) As Integer '  Configure pulse output on trajectory
Declare Function MultipleAxesPVTPulseOutputGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, StartElement As Integer, EndElement As Integer, TimeInterval As Double) As Integer '  Get pulse output on trajectory configuration
Declare Function MultipleAxesPVTLoadToMemory Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal TrajectoryPart As String) As Integer '  Multiple Axes Load PVT trajectory through function
Declare Function MultipleAxesPVTResetInMemory Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Integer '  Multiple Axes PVT trajectory reset in memory
Declare Function SingleAxisSlaveModeEnable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Integer '  Enable the slave mode
Declare Function SingleAxisSlaveModeDisable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Integer '  Disable the slave mode
Declare Function SingleAxisSlaveParametersSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal PositionerName As String, ByVal Ratio As Double) As Integer '  Set slave parameters
Declare Function SingleAxisSlaveParametersGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal PositionerName As String, Ratio As Double) As Integer '  Get slave parameters
Declare Function SingleAxisThetaClampDisable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Integer '  Set clamping disable on selected group
Declare Function SingleAxisThetaClampEnable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Integer '  Set clamping enable on selected group
Declare Function SingleAxisThetaSlaveModeEnable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Integer '  Enable the slave mode
Declare Function SingleAxisThetaSlaveModeDisable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Integer '  Disable the slave mode
Declare Function SingleAxisThetaSlaveParametersSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal PositionerName As String, ByVal Ratio As Double) As Integer '  Set slave parameters
Declare Function SingleAxisThetaSlaveParametersGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal PositionerName As String, Ratio As Double) As Integer '  Get slave parameters
Declare Function SpindleSlaveModeEnable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Integer '  Enable the slave mode
Declare Function SpindleSlaveModeDisable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Integer '  Disable the slave mode
Declare Function SpindleSlaveParametersSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal PositionerName As String, ByVal Ratio As Double) As Integer '  Set slave parameters
Declare Function SpindleSlaveParametersGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal PositionerName As String, Ratio As Double) As Integer '  Get slave parameters
Declare Function GroupSpinParametersSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal Velocity As Double, ByVal Acceleration As Double) As Integer '  Modify Spin parameters on selected group and activate the continuous move
Declare Function GroupSpinParametersGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, Velocity As Double, Acceleration As Double) As Integer '  Get Spin parameters on selected group
Declare Function GroupSpinCurrentGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, Velocity As Double, Acceleration As Double) As Integer '  Get Spin current on selected group
Declare Function GroupSpinModeStop Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal Acceleration As Double) As Integer '  Stop Spin mode on selected group with specified acceleration
Declare Function XYLineArcVerification Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal TrajectoryFileName As String) As Integer '  XY trajectory verification
Declare Function XYLineArcVerificationResultGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal FileName As String, MinimumPosition As Double, MaximumPosition As Double, MaximumVelocity As Double, MaximumAcceleration As Double) As Integer '  XY trajectory verification result get
Declare Function XYLineArcExecution Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal TrajectoryFileName As String, ByVal Velocity As Double, ByVal Acceleration As Double, ByVal ExecutionNumber As Integer) As Integer '  XY trajectory execution
Declare Function XYLineArcParametersGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal FileName As String, Velocity As Double, Acceleration As Double, CurrentElementNumber As Integer) As Integer '  XY trajectory get parameters
Declare Function XYLineArcPulseOutputSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal StartLength As Double, ByVal EndLength As Double, ByVal PathLengthInterval As Double) As Integer '  Configure pulse output on trajectory
Declare Function XYLineArcPulseOutputGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, StartLength As Double, EndLength As Double, PathLengthInterval As Double) As Integer '  Get pulse output on trajectory configuration
Declare Function XYPVTVerification Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal TrajectoryFileName As String) As Integer '  XY PVT trajectory verification
Declare Function XYPVTVerificationResultGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal FileName As String, MinimumPosition As Double, MaximumPosition As Double, MaximumVelocity As Double, MaximumAcceleration As Double) As Integer '  XY PVT trajectory verification result get
Declare Function XYPVTExecution Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal TrajectoryFileName As String, ByVal ExecutionNumber As Integer) As Integer '  XY PVT trajectory execution
Declare Function XYPVTParametersGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal FileName As String, CurrentElementNumber As Integer) As Integer '  XY PVT trajectory get parameters
Declare Function XYPVTPulseOutputSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal StartElement As Integer, ByVal EndElement As Integer, ByVal TimeInterval As Double) As Integer '  Configure pulse output on trajectory
Declare Function XYPVTPulseOutputGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, StartElement As Integer, EndElement As Integer, TimeInterval As Double) As Integer '  Get pulse output on trajectory configuration
Declare Function XYPVTLoadToMemory Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal TrajectoryPart As String) As Integer '  XY Load PVT trajectory through function
Declare Function XYPVTResetInMemory Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Integer '  XY PVT trajectory reset in memory
